--- a/24-x11.qmd
+++ b/24-x11.qmd
@@ -24,52 +24,30 @@ In this chapter, we will discuss X-11, one of the two main methods available.
 X-11 is a nonparametric procedure that works by passing predefined moving-average filters over the data. SEATS, on the other hand, derives the moving-average filters from the underlying ARIMA model and will be discussed in in @sec-seats.
 
 
-## Fundamental Identity of Seasonal Decomposition {#sec-seasonal-decomposition}
+## Basics
 
-As established in @sec-additive-and-multiplicative-adjustment, the fundamental identity for an additive decomposition model is expressed as:
+As you remember from @sec-additive-and-multiplicative-adjustment, seasonal adjustment decomposes a time series into a trend, a seasonal, and an irregular component.
+Both X-11 and SEATS achieve the decomposition by applying moving average filters over the series. In the following, we describe the basic idea behind the seasonal decomposition in X-11. If you want to perform a seasonal adjustment in R, run the following:
 
-$$
-X_t = T_t + S_t + I_t
-$$
+```{r}
+m <- seas(AirPassengers, x11 = "")
+summary(m)
+```
 
-Here, $X_t$ represents the observed time series. The seasonally adjusted series for an additive[^24-x11-1] decomposition is then calculated as:
+#### Estimating the trend component {.unnumbered}
 
-$$
-A_t = X_t - S_t
-$$
-
-[^24-x11-1]: For a multiplicative decomposition model, the identity and adjusted series are represented differently:
-
-    $$
-    X_t = T_t \cdot S_t \cdot I_t
-    $$
-
-    and the adjusted series is:
-
-    $$
-    A_t = \frac{X_t}{S_t}
-    $$
-
-
-
-## Applying Moving Average Filters for Decomposition
-
-Both X-11 and SEATS achieve the decomposition by applying moving average filters over the series. To ensure unbiased results at the series' margins, forecasts from the regARIMA model (@sec-regarima) are used to extend the series. The regARIMA model model also serves as the foundation of the initial steps in the X-11 algorithm to remove outliers and other regression effects before application of moving-averages.
-
-
-#### Estimating the Trend Component {.unnumbered}
-
-X-11 starts by estimating the **trend component**.
+X-11 starts by estimating the trend component.
 The trend component is estimated by applying a symmetric moving average over the series. Each point in time is averaged using a set number of observations to the left and right of the series.
 Because the window is symmetric, we need the series to be extended by forecasts and backcasts.
 
 Once the trend component is computed, we can subtract it from the original series to compute a *detrended series*.
 
 
-#### Estimating the Seasonal Component {.unnumbered}
+#### Estimating the seasonal component {.unnumbered}
 
 To estimate the seasonal component, a *seasonal filter* is applied to the detrended series. A seasonal filter is a symmetric moving average that is calculated by taking the mean of the same period across several years.
 For instance, the average for January would be computed using all the January values from the time series data, February would use all February values, and so on.
+
 
 
 <!--
@@ -81,6 +59,63 @@ For instance, the average for January would be computed using all the January va
 
 
 
+#### Avoid biases {.unnumbered}
+
+To ensure unbiased results at the series' margins, forecasts from the regARIMA model (@sec-regarima) are used to extend the series. The regARIMA model model also serves as the foundation of the initial steps in the X-11 algorithm to remove outliers and other regression effects before application of moving-averages.
+
+
+#### Extreme Values {.unnumbered}
+
+Additionally, X-11 has a built in extreme value procedure included.
+This procedure identifies extreme values and replaces them.
+This results in a robust procedure that can automatically choose filters and identify extreme values without much user intervention.
+
+
+
+::: callout-note
+## Outliers and Extreme values
+
+We will discuss extreme values and outliers in more detail in @sec-outliers.
+
+The terms outlier and extreme value seem interchangeable.
+In X-13, these refer to very different types of effects.
+An outlier is identified by the regARIMA model in Part A (see below) of the X-11 method.
+An extreme value is a value that is large enough to effect the results of a moving-average filter but is not identified by the regARIMA automatic modeling identification.
+Outliers are prior-adjusted out of the series while extreme values are replaced within the X-11 procedure.
+
+Both types end up in the seasonally adjusted series.
+Extreme values are assigned to the irregular component and are hence included in the seasonally adjusted series.
+Outliers get included in Part D (see below) when X-11 calculates the final seasonal factors using the original series including outlier effects.
+:::
+
+
+#### Go in circles {.unnumbered}
+
+X-11 iteratively refines this process. Each iteration enhances the estimated components by selecting more appropriate filters and managing outliers and regression effects.
+
+In the default adjustment from above, a decomposition is run 3 times along with a pre-processing step to fit the regARIMA model.
+This procedure can be seen in great detail in @ladiray12.
+The overview of each step:
+
+Part A
+
+:   Prior adjustments including regARIMA modeling of outliers, trading day and moving holiday effects.
+
+Part B
+
+:   First application of seasonal decomposition.
+    Calculate initial extreme value weights.
+
+Part C
+
+:   Second estimation of seasonal and trend.
+    Final estimation of extreme value weights.
+
+Part D
+
+:   Final estimation of seasonally adjusted series, seasonal factors, trend, irregular.
+    Combined factors incorporate the trading day and moving holiday regression effects estimated in Part A
+
 
 ## R-Fundamentals: A Simple Decomposition {#sec-simple-decomposition}
 
@@ -88,8 +123,8 @@ In order to deepen our understanding of the X-11 method, we start with a "by-han
 As a basic trend filter, we trend filter—a 2x12 moving average. The weights for this filter are distributed as 1/24, followed by 1/12 for the next 11 points, and then 1/24 again. We apply these weights to estimate the trend of the `AirPassengers` series:
 
 ```{r x11-trend}
-observed <- AirPassengers         
-filter_trend = c(1/24, rep(1/12, 11), 1/24)     
+observed <- AirPassengers
+filter_trend = c(1/24, rep(1/12, 11), 1/24)
 trend = stats::filter(observed, filter = filter_trend, sides = 2)
 tsbox::ts_plot(observed, trend)
 ```
@@ -115,70 +150,16 @@ While this basic adjustment is insightful, it also reveals limitations, particul
 
 These observations pave the way for the X-11 method, which iteratively refines this process. Each iteration enhances the estimated components by selecting more appropriate filters and managing outliers and regression effects.
 
-## X-11 Adjustment
 
-In order to use symmetric moving average filters at the end of the time series (current value), a regARIMA model is used to forecast extend the series.
-This regARIMA model is where users can test for or specify outliers, trading day and moving holiday regressors in their adjustment.
-The forecast extended series is then used to filter.
-
-Additionally, X-11 has a built in extreme value procedure included.
-This procedure identifies extremes and replaces.
-This results in a robust procedure that can automatically choose filters and identify extreme values without much user intervention.
-All that needs to be evoked beyond the default `seas()` call is to turn on the X11 spec option.
-
-```{r}
-m <- seas(AirPassengers, x11 = "")
-summary(m)
-```
-
-Before further discussion about the details of the X-11 process, let us see what happened during this modeling run.
-A variant of the simple decomposition performed in Section @sec-simple-decomposition is run 3 times along with a pre-processing step to fit a regARIMA model.
-This procedure can be seen in great detail in @ladiray12.
-The overview of each step:
-
-Part A
-
-:   Prior adjustments including regARIMA modeling of outliers, trading day and moving holiday effects.
-
-Part B
-
-:   First application of seasonal decomposition.
-    Calculate initial extreme value weights.
-
-Part C
-
-:   Second estimation of seasonal and trend.
-    Final estimation of extreme value weights.
-
-Part D
-
-:   Final estimation of seasonally adjusted series, seasonal factors, trend, irregular.
-    Combined factors incorporate the trading day and moving holiday regression effects estimated in Part A
-
-::: callout-warning
-## Outliers and Extreme values
-
-We will discuss extreme values and outliers in more detail in @sec-outliers.
-
-The terms outlier and extreme value seem interchangeable.
-In X-13, these refer to very different types of effects.
-An outlier is identified by the regARIMA model in Part A of the X-11 method.
-An extreme value is a value that is large enough to effect the results of a moving-average filter but is not identified by the regARIMA automatic modeling identification.
-Outliers are prior-adjusted out of the series while extreme values are replaced within the X-11 procedure.
-
-Both types end up in the seasonally adjusted series.
-Extreme values are assigned to the irregular component and are hence included in the seasonally adjusted series.
-Outliers get included in Part D when X-11 calculates the final seasonal factors using the original series including outlier effects.
-:::
-
+<!--
 During these steps the trend filter is automatically chosen based the noise-to-signal ratios, labeled I/C in the output file.
 The seasonal moving average is determined by the Global Moving Seasonality Ratio (GMSR).
 Being able to understand the
 
 When using the x11 spec you can change the length of the filter used for the trend and seasonal components with the `trendma` and `seasonalma` arguments respectively.
 Additionally, `sigmalim` will control the amount of extreme value adjustment that is done during the seasonal adjustment.
-
-## Frequency Domain of time series (optional)
+ -->
+## Frequency Domain (optional)
 
 We present the following as optional reading material.
 For those interesting in simply performing seasonal adjustment, an understanding of the frequency domain of a time series, is not mandatory.
@@ -245,20 +226,40 @@ x_seasonal = x - x_trend
 fx_seasonal = spec.ar(x_seasonal, na.action = na.pass)
 ```
 
-## X-11 Moving average filters
+## X-11 Filters
 
-We introduce the moving average filters and subsequently plot the filter weights along with the values of the squared gain function.
-The X-11 spec also allows users to control the length of the trend and seasonal moving average filters used during the adjustment.
-Generally speaking, longer filters imply a more stable seasonal component and shorter filters a more changing seasonal pattern.
-Of course, a longer filter will use more data for the calculation of components at each time point.
-This is an important observation and understanding it might help a user decide on a short or long filter.
-Since longer filters use more data there tend to be smaller revisions when a new data point is added.
-However, there will be revisions to data values further back.
+In the X-11 method, the choice of moving average filters plays a crucial role in seasonal adjustment. Users have the flexibility to select the length of both the trend and seasonal moving average filters, impacting the stability and responsiveness of the seasonal component. For example, the following model uses a short `3x1` filter to identify the seasonal component:
 
-A shorter filter is just the opposite, they tend to produce larger revisions but they do not extend as far back into the series.
-If a filter is not choosen by the user then automatic filter selection is used.
-To understand the length of a filter let's look at the (finite) number of choice available in during an x11 adjustment.
-@tbl-x11-filters shows the different filters available for the seasonal component and the trend component.
+```{r}
+m_short <- seas(AirPassengers, x11.seasonalma = "s3x1")
+plot(m_short)
+```
+
+On the other hand, the following uses a long `3x9` filter:
+
+
+```{r}
+m_long <- seas(AirPassengers, x11.seasonalma = "s3x9")
+plot(m_long)
+```
+
+Generally speaking, longer filters imply a more stable seasonal component and shorter filters a more changing seasonal pattern. We can see this by comparing the `monthplot()` outputs of the estimations.
+
+```{r}
+monthplot(m_short)
+```
+
+As you can see, the seasonal component is smoother with the longer filter:
+
+```{r}
+monthplot(m_long)
+```
+
+Longer filters involve more data points in the calculation of the seasonal component at each time point. Therefore, they typically result in smaller revisions when new data is added to the series. However, these revisions can impact historical data values further back in the time series.
+
+In contrast, shorter filters, which use fewer data points, are more likely to produce larger revisions with each new data addition. These revisions, while more significant, extend less far back into the historical data.
+
+If a user does not select a filter, the X-11 method defaults to automatic filter selection. To understand the implications of filter length, consider the finite set of options available during an X-11 adjustment. @tbl-x11-filters details the different filters that can be applied to both the seasonal and trend components of the series.
 
 | Value        | Description                                                                                                                                                                                                                     |
 |--------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
@@ -271,6 +272,7 @@ To understand the length of a filter let's look at the (finite) number of choice
 | `x11default` | A 3×3 moving average is used to calculate the initial seasonal factors in each iteration, and a 3×5 moving average to calculate the final seasonal factors.                                                                     |
 
 : Filters available in X11 {#tbl-x11-filters tbl-colwidths="\[30,70\]"}
+
 
 ```{r, echo=FALSE}
 # Function to find seasonal filter weight by passing impuse through
@@ -396,6 +398,7 @@ tsbox::ts_plot(
 )
 
 ```
+<!--
 
 ## Points to include in Chapter
 
@@ -403,3 +406,4 @@ tsbox::ts_plot(
 -   Changing filters can affect which values are extreme
 -   Changing sigma limits changes the extreme values and can affect what filter seems most appropriate
     -   Experiment with changing filters and sigma limits for your series to see the results
+ -->
